Added new For Work

--- a/python/sendmail/config.properties
+++ b/python/sendmail/config.properties
@@ -5,10 +5,10 @@ emailcontent.subject   = Test Emails
 emailcontent.body      = This is a test email sent from Python script.
 
 # Email Config
-emailconfig.sender     = ""
-emailconfig.receiver   = ""
-emailconfig.password   = ""
+emailconfig.sender     = 
+emailconfig.receiver   = 
+emailconfig.password   = 
 
 # Server Config
-serverconfig.smtp_host = ""
-serverconfig.smtp_port = ""
+serverconfig.smtp_host = 
+serverconfig.smtp_port = 
